# Copyright (C) 2017 Stefan Koch <stefan.koch10@gmail.com>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of version 2 of the GNU General
# Public License as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.

man_MANS = usbauth.1
sysconf_DATA = usbauth.conf
udevrulesdir = /lib/udev/rules.d
dist_udevrules_DATA=20-usbauth.rules
dbusservicedir = $(sysconfdir)/dbus-1/system.d
dist_dbusservice_DATA = org.opensuse.usbauth.conf
